--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,20 @@
 # config.yaml
 
-setup:
-      - full_name: Simple Widget
+plugin:
+      - plugin_name: Simple Widget
+      - donate_link: htt://example.com
+      - tags: comments, spam
+      - requires_at_least: 3.0.1
+      - tested_up_to: 3.4
+      - stable_tag: 4.3
+      - license: GPLv2
+      - license_url: http://www.gnu.org/licenses/gpl-2.0.html
       - short_description: A widget from completing simple tasks.
-      - long_description: A longer description....
+      - long_description:  > 
+            A longer description of your plugin.
 
-advanced:
+
+
+configuration:
+      - folder_name: simple_widget
       - unique_prefix: wp_sw
