--- a/config.yml
+++ b/config.yml
@@ -2,8 +2,13 @@
 
 plugin:
   name: Simple Widget
+  uri: http://example.com
   donate_link: http://example.com
+  authors: Finn, Jake
+  author_emails: you@example.com
+  author_uri: http://example.com
   tags: comments, spam
+  version: 3.0.1
   requires_at_least: 3.0.1
   tested_up_to: 3.4
   stable_tag: 4.3
