--- a/config.yml
+++ b/config.yml
@@ -9,7 +9,7 @@ plugin:
   author_emails: you@example.com
   author_uri: http://example.com
   tags: comments, spam
-  version: 3.0.1
+  version: 0.0.1
   requires_at_least: 3.0.1
   tested_up_to: 3.4
   stable_tag: 4.3
@@ -34,8 +34,10 @@ plugin:
 
 configuration:
   folder_name: simple_widget
-  unique_prefix: wp_sw
-  
+  unique_function_prefix: wpsw_
+  unique_constant_prefix: WPSW_
+
+
 
 widgets:
  - name: Simple Widget
@@ -43,12 +45,16 @@ widgets:
    description: A widget that allows simple actions.
    # Attributes - title is assumed
    attributes:
-     - name: image
+     - label: Simple Image
+       name: image
        type: image
 
-     - name: content
+     - label: Displayed Content
+       name: content
        type: textarea
 
-     - name: link
+     - label: URL
+       name: link
        type: url
 
+  
