Improved config file and std out help text.

--- a/config.yml
+++ b/config.yml
@@ -42,9 +42,13 @@ configuration:
 widgets:
  - name: Simple Widget
    unique_class_name: SimpleWidget
+   unique_prefix: sww_
    description: A widget that allows simple actions.
-   # Attributes - title is assumed
    attributes:
+     - label: Title
+       name: title
+       type: text
+
      - label: Simple Image
        name: image
        type: image
